--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^23.1.1",
     "@types/three": "^0.162.0",
+    "camera-controls": "^2.8.5",
     "three": "^0.162.0",
     "vite-plugin-css-injected-by-js": "^3.5.0",
     "vite-plugin-dts": "^3.8.3"
